--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
 	stage('manual aproval') {
 	  steps {
 	    timeout(time: 60, unit: 'MINUTES') {
- 	      inout message: "Move to stage 3?"
+ 	      input message: "Move to stage 3?"
 	    }
 	  }
 	}
